--- a/RGB color game/colorGame.css
+++ b/RGB color game/colorGame.css
@@ -1,9 +1,39 @@
 body {
     background-color: #232323;
+    margin: 0;
+    font-family: 'Dosis', sans-serif;
 }
 
 h1 {
+    padding: 20px 0;
     color: white;
+    text-align: center;
+    background: deepskyblue;
+    margin: 0;
+    font-weight: bold;
+    line-height: 1.1;
+}
+
+button {
+    border: none;
+    background: none;
+    font-family: 'Dosis', sans-serif;
+    font-weight: 800;
+    color: deepskyblue;
+    letter-spacing: 1px;
+    font-size: 20px;
+    transition: all 0.5s;
+    height: 30px;
+    margin: 0;
+    outline: none;
+    /*browser support for transition*/
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+}
+
+button:hover {
+    color: white;
+    background: deepskyblue;
 }
 
 /*span {
@@ -23,6 +53,11 @@ h1 {
     padding-top: 30%;
     float: left;
     margin: 1.66%;
+    border-radius: 10%;
+    transition: background 0.5s;
+    /*browser support for transition*/
+    -webkit-transition: background 0.6s;
+    -moz-transition: background 0.6s;
 }
 
 #container {
@@ -30,6 +65,17 @@ h1 {
     margin: 0 auto;
 }
 
+#colorDisplay {
+    font-size: 150%;
+}
+
+#message {
+    display: inline-block;;
+    width: 25%;
+
+}
+
 .selected {
-    background: blue;
+    color: white;
+    background: deepskyblue;
 }
